# SQLSHERLOCK-ENV

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  train.py
.claude/: settings.local.json
server/: app.py
sqlsherlock_env/: __init__.py  client.py  models.py  pyproject.toml
sqlsherlock_env/server/: __init__.py  app.py  database.py  dataset_loader.py  environment.py  exporter.py  issue_detector.py  requirements.txt  reward.py  schema_profiler.py  sqlsherlock_env_environment.py  ui.py  validator.py
sqlsherlock_env/server/graders/: __init__.py  task1.py  task2.py  task3.py  task4.py  universal.py
tests/: conftest.py  test_environment.py  test_graders.py  test_issue_detector.py
